Closed Bug 220020 Opened 21 years ago Closed 21 years ago

PR_EnumerateAddrInfo should not special case port 0

Categories

(NSPR :: NSPR, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

Attachments

(1 file)

PR_EnumerateAddrInfo should not special case port 0:

       if (port != 0)
           result->inet.port = PR_htons(port);

patch coming up...
Attached patch v1 patchSplinter Review
here's the patch.
Attachment #131930 - Flags: review?(wchang0222)
Comment on attachment 131930 [details] [diff] [review]
v1 patch

r=wtc.
Attachment #131930 - Flags: review?(wchang0222) → review+
fixed on NSPR trunk and NSPRPUB_PRE_4_2_CLIENT_BRANCH
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: