fixes bug 220020 "PR_EnumerateAddrInfo should not special case port 0" r=wtc